// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormField /> renders a form field component 1`] = `
<div
  className="sc-bZQynM dAueZL"
>
  <input
    className="sc-ifAKCX cnCCVj"
    placeholder=""
    type="text"
  />
</div>
`;

exports[`<FormField /> renders a form field with a label 1`] = `
<div
  className="sc-bZQynM dAueZL"
>
  <div
    className="sc-EHOje hCmDXA"
  >
    This field's label
  </div>
  <input
    className="sc-ifAKCX cnCCVj"
    placeholder=""
    type="text"
  />
</div>
`;

exports[`<FormField /> renders a form field with a warning 1`] = `
<div
  className="sc-bZQynM dAueZL"
>
  <div
    className="sc-EHOje VwEMp"
  >
    This field's label
  </div>
  <input
    className="sc-ifAKCX hLehFA"
    placeholder=""
    type="text"
  />
  <div
    className="sc-bxivhb iOrRap"
  >
    You are kind of bad at forms
  </div>
</div>
`;

exports[`<FormField /> renders a form field with an error 1`] = `
<div
  className="sc-bZQynM dAueZL"
>
  <div
    className="sc-EHOje dGjzft"
  >
    This field's label
  </div>
  <input
    className="sc-ifAKCX hfSsuI"
    placeholder=""
    type="text"
  />
  <div
    className="sc-bxivhb ddjxUM"
  >
    You are bad at forms
  </div>
</div>
`;
